Fix editor cut off due to absolute positioning of the mobile content tabs container

--- a/src/styles/_mobileworkspace.scss
+++ b/src/styles/_mobileworkspace.scss
@@ -76,7 +76,7 @@ $shadow-light: rgba(0, 0, 0, 0.2);
 
 .mobile-editor-panel {
   width: 100vw;
-  height: 100%;
+  height: calc(100% - 70px);
   z-index: 1;
 }
 
